feat: rotas de list com paginação
